[Fix] Now fireing a window resize event once a table collapse has been opened.

--- a/angular-ais-common/ais-common-style.css
+++ b/angular-ais-common/ais-common-style.css
@@ -18,3 +18,7 @@
 	margin-left: 20px;
 	margin-right: 20px;
 }
+
+.contents.row .inline-block > * {
+	display: inline-block;
+}
